see #19111, #19105 - don't ignore/reverse user input given in popup reg. tags/memberships - report correct number of affected relations (#19105) - when unglued (old) node is moved, place it either at the current mouse position (in cursor is in mapview) or 5 pixels above the original position. The old code sometimes placed it somewhere near the edge of the mapview window. The actual position depends on the input device that is used to select the node and to close the popup dialog (keyboard or mouse) - various code simplifications
git-svn-id: https://josm.openstreetmap.de/svn/trunk@16362 0c6e7542-c601-0410-84e7-c038aed88b3b